--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <section id="main-header">
 	<div class="main">
-		<img src="images/mail.svg" alt="Email" width="200" height="200" style="margin-top: 100px;" />
+		<img src="images/mail.svg" alt="Email" width="200" height="200" />
 			<div class="full-nav">
 			<nav id="nav">
 				<div class="dropdown">
@@ -45,7 +45,7 @@
 				</div>
 
 				<div class="dropdown">
-					<a class="dropbtn" href="#">Partners</a>
+					<a class="dropbtn" href="products.html">Products</a>
 				</div>
 
 				<div class="dropdown">
