--- a/data-center-consulting.html
+++ b/data-center-consulting.html
@@ -42,7 +42,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Partners</a>
+							<a class="dropbtn" href="products.html">Products</a>
 						</div>
 
 						<div class="dropdown">
@@ -168,7 +168,7 @@
 									</ul>
 								</section>
 							</div>
-							
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
