--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 				<section id="header" class="main-header">
-						<img src="images/main-logo.jpg" alt="yashasvi logo" class="landing" width="120" height="80" />
-							<h1><a href="index.html"><b>Yashasvi Information Solutions</b></a></h1>
-							<h3><b><a href="index.html"><b><i>Let's simplify..</i></b></a></b></h3>
+						<img src="images/main-logo.jpg" alt="yashasvi logo" class="landing" width="360" height="230" />
+						<img src="images/brush-stroke3.png" alt="brush stroke" width="1500" height="300" />
+						<h1 style="font-size: 60px; margin-top: -10%;"><b>YASHASVI INFORMATION SOLUTIONS</b></h1>
+						<h3><b><i>Let's simplify..</i></b></h3>
+						<br>
 
 						<div class="full-nav">
 						<nav id="nav">
@@ -31,13 +33,13 @@
 							<div class="dropdown">
 								<a class="dropbtn" href="#">Services</a>
 								<div class="dropdown-content">
-									<a class="nav-links" href="data-center-consulting.html">Data Center Consulting</a>
-									<a class="nav-links" href="cloud-consulting.html">Cloud Consulting</a>
-									<a class="nav-links" href="it-transformation.html">IT Transformation</a>
-									<a class="nav-links" href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
-									<a class="nav-links" href="network-collab.html">Network and Collaboration</a>
-									<a class="nav-links" href="compute-storage-backup.html">Compute, Storage and Backup</a>
-									<a class="nav-links" href="end-user-computing.html">End User Computing</a>
+									<a href="data-center-consulting.html">Data Center Consulting</a>
+									<a href="cloud-consulting.html">Cloud Consulting</a>
+									<a href="it-transformation.html">IT Transformation</a>
+									<a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+									<a href="network-collab.html">Network and Collaboration</a>
+									<a href="compute-storage-backup.html">Compute, Storage and Backup</a>
+									<a href="end-user-computing.html">End User Computing</a>
 								</div>
 							</div>
 
@@ -51,7 +53,7 @@
 							</div>
 
 							<div class="dropdown">
-								<a class="dropbtn" href="#">Partners</a>
+								<a class="dropbtn" href="products.html">Products</a>
 							</div>
 
 							<div class="dropdown">
@@ -77,8 +79,9 @@
 										<i class="icon featured fa-question"></i>
 										<header>
 											<h2><b>Who are we?</b></h2>
+											<br>
 										</header>
-										<p class="left"><b>Yashasvi’s vision is to be a one of the formidable names in IT Infrastructure consulting.
+										<p class="left"><b>Yashasvi’s vision is to be one of the formidable names in IT Infrastructure consulting.
 											To provide quality of service and enable customers adopt “technology for business sake” that brings in direct business benefits.</b></p>
 									</section>
 								</div>
@@ -87,6 +90,7 @@
 										<i class="icon featured alt fa-laptop"></i>
 										<header>
 											<h2><b>Services</b></h2>
+											<br>
 										</header>
 										<ol>
 											<li><b>Data Center Consulting</b></li>
@@ -105,6 +109,7 @@
 										<i class="icon featured alt2 fa-check"></i>
 										<header>
 											<h2><b>Solutions</b></h2>
+											<br>
 										</header>
 										<ol>
 											<li><b>Cyber Security</b></li>
@@ -373,7 +378,7 @@
 									</ul>
 								</section>
 							</div>
-							
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
