--- a/veritas.html
+++ b/veritas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>BCP/DR</title>
+		<title>Veritas - Yashasvi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,11 +10,10 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/server-tool.svg" alt="Cloud Consulting" />
-					<h1><a href="#"><b>Business Continuity Planning - Disaster Recovery</b></a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/backup-recovery.svg" alt="Veritas" />
+					<h1><a href="#"><b>Veritas</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
-
 						<div class="dropdown">
 							<a class="dropbtn" href="index.html">Home</a>
 						</div>
@@ -58,35 +57,67 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<article class="box post">
-									<header>
-										<h2><b>Introduction</b></h2>
-									</header>
-									<section>
-										<p>
-											Business Continuity (BC) management is a service that provides a framework to ensure the resilience of your
-											business to any eventuality. It ensures continuity of service to your key customers and the protection of
-											your brand and reputation. Corporate governance and industry legislation have made executives liable for the
-											security of their corporate information. It provides a basis for planning to ensure your long-term survivability
-											following a disruptive event including both on-premise and cloud workloads and data. How data is safe in cloud and
-											cloud provider liability associated with data protection and data security.
-										</p>
-									</section>
 									<section>
 										<header>
-											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables:</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Veritas Products Sold</b></h3>
 										</header>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Multi-cloud Data Management</b></h3>
 										<p>
-											Following are the deliverables of this service:
+											<ol>
+												<li>360 data management</li>
+												<li>Information map</li>
+												<li>Cloudmobiltiy</li>
+												<li>Resiliency platform</li>
+												<li>Cloudpoint</li>
+												<li>Enterprise vault</li>
+											</ol>
 										</p>
-										<ul>
-											<li>Detailed Business Continuity Plan</li>
-											<li>Detailed Disaster Recovery Plans</li>
-											<li>Disaster Recovery drills to test the BCP/DR plans</li>
-										</ul>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Backup & Recovery</b></h3>
+										<p>
+											<ol>
+												<li>Net backup</li>
+												<li>Netbackup appliances</li>
+												<li>Backup exec</li>
+												<li>Velocity</li>
+												<li>Flex appliance</li>
+												<li>Desktop and laptop option</li>
+												<li>System recovery</li>
+												<li>SaaS backup</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Business Continuity</b></h3>
+										<p>
+											<ol>
+												<li>Resiliency platform</li>
+												<li>Cloudmobility</li>
+												<li>Infoscale availability</li>
+												<li>Managed continuity services</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Software Defined Storage</b></h3>
+										<p>
+											<ol>
+												<li>Access</li>
+												<li>Access appliance</li>
+												<li>Cloud storage</li>
+												<li>Infoscale enterprise</li>
+											</ol>
+										</p>
+										<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Information Governance</b></h3>
+										<p>
+											<ol>
+												<li>Enterprise vault</li>
+												<li>Enterprise vault. Cloud</li>
+												<li>Information map</li>
+												<li>Data insight</li>
+												<li>eDiscovery  platform</li>
+											</ol>
+										</p>
 									</section>
 								</article>
 							</div>
 							<div class="col-4 col-12-medium">
+
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
@@ -94,13 +125,30 @@
 									</header>
 									<br>
 									<ul>
-										<li><a href="data-center-consulting.html">Data Center Consulting</a></li>
-										<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
-										<li><a href="it-transformation.html">IT Transformation</a></li>
-										<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
-										<li><a href="network-collab.html">Network and Collaboration</a></li>
-										<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
-										<li><a href="end-user-computing.html">End User Computing</a></li>
+										<li><a href="dell-emc.html">Dell-EMC</a></li>
+										<li><a href="veritas.html">Veritas</a></li>
+										<li><a href="ibm.html">IBM</a></li>
+										<li><a href="netapp.html">NetApp</a></li>
+										<li><a href="american-megatrends.html">American Megatrends</a></li>
+										<li><a href="hitachi.html">Hitachi</a></li>
+										<li><a href="symantec.html">Symantec</a></li>
+										<li><a href="hpe.html">HP Enterprise</a></li>
+										<li><a href="acronis.html">Acronis</a></li>
+										<li><a href="brocade.html">Brocade</a></li>
+										<li><a href="entrust-datacard.html">Entrust Datacard</a></li>
+										<li><a href="sophos.html">Sophos</a></li>
+										<li><a href="instasafe.html">InstaSafe</a></li>
+										<li><a href="riverbed.html">Riverbed</a></li>
+										<li><a href="seclore.html">Seclore</a></li>
+										<li><a href="redhat.html">RedHat</a></li>
+										<li><a href="vmware.html">VMware</a></li>
+										<li><a href="suse.html">Suse</a></li>
+										<li><a href="polycom.html">Polycom</a></li>
+										<li><a href="microsoft.html">Microsoft</a></li>
+										<li><a href="apple.html">Apple</a></li>
+										<li><a href="oracle.html">Oracle</a></li>
+										<li><a href="aws.html">AWS</a></li>
+										<li><a href="lenovo.html">Lenovo</a></li>
 									</ul>
 								</section>
 							</div>
