--- a/unified-workplace.html
+++ b/unified-workplace.html
@@ -42,7 +42,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Partners</a>
+							<a class="dropbtn" href="products.html">Products</a>
 						</div>
 
 						<div class="dropdown">
